add RT data of exp3 b

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -517,6 +517,27 @@ Data analysis is the same as study 3a.
 
 There was evidence for the main effect of valence, \(F(2, 110) = 5.29\), \(\mathit{MSE} = 0.26\), \(p = .006\), \(\hat{\eta}^2_G = .011\), and main effect of self-relevance, \(F(1, 55) = 5.07\), \(\mathit{MSE} = 0.88\), \(p = .028\), \(\hat{\eta}^2_G = .019\), as well as the intercation, \(F(2, 110) = 16.18\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .033\).
 
+We conducted two repeated measures ANOVA for self and other condition separately. For the results from self-condition aligned with previous experiments, showed an main effect of moral valence on \emph{d'}: \(F(2, 110) = 18.32\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .090\). Simple effect analysis showed that the d' was larger for good self (2.23 ± 0.81) than for bad self (1.66 ± 0.74), \emph{t}(55) = 6.11, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.817, 95\% CI {[}0.511 1.117{]} , BF10 = 8.43, and neutral self (1.91 ± 0.66), \emph{t}(55) = 3.03, \emph{p} = 0.0038, Cohen's \emph{d} = 0.404, 95\%CI {[}0.13 0.675{]} , BF10 = 1.33e+5. There was also higher d' for neutral-self condition than bad-self conditions, \emph{t}(34) = 3.02, \emph{p} = 0.0039, Cohen's \emph{d} = 0.403, 95\% CI {[}0.129 0.674{]}, BF10 = 8.22.
+
+For the stranger condition, there was no strong evidence for the effect of the morality of the association on d', \(F(2, 110) = 3.26\), \(\mathit{MSE} = 0.26\), \(p = .042\), \(\hat{\eta}^2_G = .011\).
+
+We also tested the effect of personal association by comparing \emph{d'} values for difference moral valence level. The results showed that the bad-self association condition was responded worse than the bad-stranger association condition (2.18 ± 0.911), \emph{t}(55) = -4.1, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.548, 95\% CI {[}-0.827 -0.265{]}, BF10 = 167. The neutral-self was also worse than the neutral-stranger (2.28 ± 1), \emph{t}(55) = -3.15, \emph{p} = 0.0026 , Cohen's \emph{d} = -0.422, 95\% CI {[}-0.693 -0.146{]}, BF10 = 11.7. While the good-self association condition and good-stranger conditions (2.03 ± 0.89) are not differ from each other, \emph{t}(55) = 1.394, \emph{p} = 0.169, Cohen's \emph{d} = 0.186, 95\% CI{[}-0.079 0.449{]}, BF10 = 0.364.
+
+\hypertarget{analaysis-of-reaction-time.-4}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-4}}
+
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
+
+We found three-way intercation between matchness, and valence (\(F(1.99, 109.63) = 55.67\), \(\mathit{MSE} = 4,203.96\), \(p < .001\), \(\hat{\eta}^2_G = .032\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
+
+For the matched trials, ce , the effect of identity , and the interaction .
+For the matched trials, we found that interaction between of valence and identity, \(F(1.67, 92.11) = 6.14\), \(\mathit{MSE} = 6,472.48\), \(p = .005\), \(\hat{\eta}^2_G = .009\), BF10 = 1.17.
+
+Then, the matched trials were analyzed for the self-relevance and stranger-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, \(F(1.66, 91.38) = 23.98\), \(\mathit{MSE} = 6,965.61\), \(p < .001\), \(\hat{\eta}^2_G = .100\), BF10 = 4.54e+6. Paired t tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), t(55) = -8.78, p \textless{} 0.001, Cohen's \emph{d} = -1.173, 95\% CI {[}-1.511 -0.828{]}, BF10 = 1.84e+9, and to neutral-self association (880 ± 116), t(55) = 3.748, p \textless{} 0.0001, Cohen's \emph{d} = -0.501, 95\% CI {[}-0.777 -0.221{]}, BF10 = 58.7. The neutral-self was faster than the bad-self associations, t(55) = -2.41, p = 0.019 , Cohen's \emph{d} = -0.321, 95\% CI {[}-0.589 -0.051{]}, BF10 = 2.03.
+The effect of moral valence was also significant for the stranger-relevance conditions, \(F(1.89, 103.94) = 5.96\), \(\mathit{MSE} = 5,589.90\), \(p = .004\), \(\hat{\eta}^2_G = .014\), BF10 = 8.55. the good-other condition (734 ± 158) didn't differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen's \emph{d} = -0.009, 95\% CI {[}-0.271 -0.293{]}, BF10 = 0.15, but faster than the bad other condition (776 ± 173), t(55) = -3.14, p = 0.0027, Cohen's \emph{d} = -0.419, 95\% CI {[}-0.691 -0.144{]}, BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, t(55) = -3.232, p = 0.0021, Cohen's \emph{d} = -0.432, 95\% CI {[}-0.704 -0.156{]}, BF10 = 14.3.
+
+We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self vs.~good-stranger, t(55) = 4.29, p \textless{} 0.001, Cohen's \emph{d} = 0.573, 95\% CI {[}0.288 0.854{]}, BF10 = 297.2; neutral-self vs.~neutral -stranger, t(55) = 7.17, p \textless{} 0.001, Cohen's \emph{d} = 0.958, 95\% CI {[}0.638 1.272{]}), BF10 = 5.77e+6; bad-self vs.~bad-other, t(55) = 6.03, p \textless{} 0.001, Cohen's \emph{d} = 0.806, 95\% CI {[}0.5 1.11{]}, BF10 = 100208.03.
+
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
@@ -560,8 +581,8 @@ Identity $\times$ Morality & 4.12 & 2 & 116 & 0.14 & .019 & .004\\
 
 We further examined the effect of valence for both self and other.
 
-\hypertarget{analaysis-of-reaction-time.-4}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-4}}
+\hypertarget{analaysis-of-reaction-time.-5}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-5}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
