revise code for 4a

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -530,54 +530,59 @@ The results of reaction times of matchness trials showed similiar pattern as the
 
 We found three-way intercation between matchness, and valence (\(F(1.99, 109.63) = 55.67\), \(\mathit{MSE} = 4,203.96\), \(p < .001\), \(\hat{\eta}^2_G = .032\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
 
-For the matched trials, ce , the effect of identity , and the interaction .
-For the matched trials, we found that interaction between of valence and identity, \(F(1.67, 92.11) = 6.14\), \(\mathit{MSE} = 6,472.48\), \(p = .005\), \(\hat{\eta}^2_G = .009\), BF10 = 1.17.
+For the matched trials, we found that interaction between of valence and identity, \(F(1.67, 92.11) = 6.14\), \(\mathit{MSE} = 6,472.48\), \(p = .005\), \(\hat{\eta}^2_G = .009\), BF10 = 1.17. Then, the matched trials were analyzed for the self-relevance and stranger-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, \(F(1.66, 91.38) = 23.98\), \(\mathit{MSE} = 6,965.61\), \(p < .001\), \(\hat{\eta}^2_G = .100\), BF10 = 4.54e+6. Paired \emph{t}-tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), \emph{t}(55) = -8.78, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -1.173, 95\% CI {[}-1.511 -0.828{]}, BF10 = 1.84e+9, and to neutral-self association (880 ± 116), \emph{t}(55) = 3.748, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = -0.501, 95\% CI {[}-0.777 -0.221{]}, BF10 = 58.7. The neutral-self was faster than the bad-self associations, \emph{t}(55) = -2.41, \emph{p} = 0.019 , Cohen's \emph{d} = -0.321, 95\% CI {[}-0.589 -0.051{]}, BF10 = 2.03.
+The effect of moral valence was also significant for the stranger-relevance conditions, \(F(1.89, 103.94) = 5.96\), \(\mathit{MSE} = 5,589.90\), \(p = .004\), \(\hat{\eta}^2_G = .014\), BF10 = 8.55. the good-other condition (734 ± 158) didn't differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen's \emph{d} = -0.009, 95\% CI {[}-0.271 -0.293{]}, BF10 = 0.15, but faster than the bad other condition (776 ± 173), \emph{t}(55) = -3.14, \emph{p} = 0.0027, Cohen's \emph{d} = -0.419, 95\% CI {[}-0.691 -0.144{]}, BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, \emph{t}(55) = -3.232, \emph{p} = 0.0021, Cohen's \emph{d} = -0.432, 95\% CI {[}-0.704 -0.156{]}, BF10 = 14.3.
 
-Then, the matched trials were analyzed for the self-relevance and stranger-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, \(F(1.66, 91.38) = 23.98\), \(\mathit{MSE} = 6,965.61\), \(p < .001\), \(\hat{\eta}^2_G = .100\), BF10 = 4.54e+6. Paired t tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), t(55) = -8.78, p \textless{} 0.001, Cohen's \emph{d} = -1.173, 95\% CI {[}-1.511 -0.828{]}, BF10 = 1.84e+9, and to neutral-self association (880 ± 116), t(55) = 3.748, p \textless{} 0.0001, Cohen's \emph{d} = -0.501, 95\% CI {[}-0.777 -0.221{]}, BF10 = 58.7. The neutral-self was faster than the bad-self associations, t(55) = -2.41, p = 0.019 , Cohen's \emph{d} = -0.321, 95\% CI {[}-0.589 -0.051{]}, BF10 = 2.03.
-The effect of moral valence was also significant for the stranger-relevance conditions, \(F(1.89, 103.94) = 5.96\), \(\mathit{MSE} = 5,589.90\), \(p = .004\), \(\hat{\eta}^2_G = .014\), BF10 = 8.55. the good-other condition (734 ± 158) didn't differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen's \emph{d} = -0.009, 95\% CI {[}-0.271 -0.293{]}, BF10 = 0.15, but faster than the bad other condition (776 ± 173), t(55) = -3.14, p = 0.0027, Cohen's \emph{d} = -0.419, 95\% CI {[}-0.691 -0.144{]}, BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, t(55) = -3.232, p = 0.0021, Cohen's \emph{d} = -0.432, 95\% CI {[}-0.704 -0.156{]}, BF10 = 14.3.
+We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self vs.~good-stranger, \emph{t}(55) = 4.29, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.573, 95\% CI {[}0.288 0.854{]}, BF10 = 297.2; neutral-self vs.~neutral -stranger, \emph{t}(55) = 7.17, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.958, 95\% CI {[}0.638 1.272{]}), BF10 = 5.77e+6; bad-self vs.~bad-other, \emph{t}(55) = 6.03, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.806, 95\% CI {[}0.5 1.11{]}, BF10 = 100208.03.
 
-We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self vs.~good-stranger, t(55) = 4.29, p \textless{} 0.001, Cohen's \emph{d} = 0.573, 95\% CI {[}0.288 0.854{]}, BF10 = 297.2; neutral-self vs.~neutral -stranger, t(55) = 7.17, p \textless{} 0.001, Cohen's \emph{d} = 0.958, 95\% CI {[}0.638 1.272{]}), BF10 = 5.77e+6; bad-self vs.~bad-other, t(55) = 6.03, p \textless{} 0.001, Cohen's \emph{d} = 0.806, 95\% CI {[}0.5 1.11{]}, BF10 = 100208.03.
+\hypertarget{discussion-3}{%
+\subsection{Discussion}\label{discussion-3}}
+
+In experiment 3b, we separated the self-referential and other-referential tasks into different blocks so that participants had lower cognitive load when finish the task. We replicated the pattern from experiment 3a that the valence effect is stronger when the stimuli were self-referential. Contrast to experiment 3a, however, we found that the self-referential condition is out-performed by other-referential conditions. This pattern suggest that the self-referential enhanced the valence effect, and the advantage to self is relative instead of absolute.
 
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
 
-\hypertarget{participants-6}{%
-\subsection{Participants}\label{participants-6}}
+\hypertarget{methods-1}{%
+\subsection{Methods}\label{methods-1}}
 
-64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
+\hypertarget{participants-6}{%
+\subsubsection{Participants}\label{participants-6}}
+
+64 participants (37 female, age = 19.70 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, 32 were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 52 participants (27 female, age = 19.73 \(\pm\) 1.24) were analyzed and reported.
+
+\hypertarget{experimental-design}{%
+\subsubsection{Experimental design}\label{experimental-design}}
+
+As in Experiment 3, a 2× 3× 2 within-subject design was used. The first variable was self-relevance (self and stranger associations); the second variable was moral valence (good, normalneutral and bad associations); the third variable was the matching between shape and label (matching vs.~non-match for the personal association).
+However, in this the task, participants only learn the association between two geometric shapes and two labels (self and other), i.e., only self-relevance were related to the task. The moral valence manipulation was achieved by embeding the personal label of the labels in the geometric shapes, see below. For simplicity, the trials where shapes where paired with self and with a word of \enquote{good person} inside were shorted as good-self condition, similarly, the trials where shapes paired with the self and with a word of \enquote{bad person} inside were shorted as bad-self condition. Hence, we also have six conditions: good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other.
+
+\hypertarget{stimuli-1}{%
+\subsubsection{Stimuli}\label{stimuli-1}}
+
+2 shapes were included (circle, square) and each appeared above a central fixation cross with the personal label appearing below. However, the shapes were not empty but with a two-Chinese-character word in the middle, the word was one of three labels with different moral valence: \enquote{good person}, \enquote{bad person} and \enquote{neutral person}. Before the experiment, participants learned the self/other association, and were informed to only response to the association between shapes' configure and the labels below the fixation, but ignore the words within shapes. Besides the behavioral experiments, participants from Tsinghua community also finished questionnaires as Experiments 3, and participants from Wenzhou community finished a series of questionnaire as the other experiment finished in Wenzhou.
+
+\hypertarget{procedure-6}{%
+\subsubsection{Procedure}\label{procedure-6}}
+
+The procedure was similar to Experiment 1. There were 6 blocks of trial, each with 120 trials for 2017 data. Due to procedure error, the data collected in 2015 in Tsinghua community only have 60 trials for each block, i.e., 30 trials per condition.
+
+\hypertarget{data-analysis-6}{%
+\subsubsection{Data analysis}\label{data-analysis-6}}
+
+The data were analyzed in the same way as in experiment 3a and 3b.
 
 \hypertarget{results-6}{%
 \subsection{Results}\label{results-6}}
 
 \hypertarget{analaysis-of-d-prime.-4}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-4}}
+\subsubsection{\texorpdfstring{Analaysis of \emph{d} prime.}{Analaysis of d prime.}}\label{analaysis-of-d-prime.-4}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
-We found the effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\), \(p < .001\), \(\hat{\eta}^2_G = .189\)) and its interaction with valence (the effect of gender differed by clinic, (\(F(2, 116) = 4.12\), \(\mathit{MSE} = 0.14\), \(p = .019\), \(\hat{\eta}^2_G = .004\)). But the effect of valence was not found, \(F(2, 116) = 0.53\), \(\mathit{MSE} = 0.11\), \(p = .587\), \(\hat{\eta}^2_G = .000\).
-
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
-\begin{tabular}{lllllll}
-\toprule
-Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
-\midrule
-Identity & 121.04 & 1 & 58 & 0.48 & < .001 & .189\\
-Morality & 0.53 & 2 & 116 & 0.11 & .587 & .000\\
-Identity $\times$ Morality & 4.12 & 2 & 116 & 0.14 & .019 & .004\\
-\bottomrule
-\addlinespace
-\end{tabular}
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} Note that the column names contain beautiful mathematical copy: This is because the table has variable labels.}
-\end{tablenotes}
-\end{threeparttable}
-\end{center}
-\end{table}
+We found the effect of identity (\(F(1, 51) = 112.88\), \(\mathit{MSE} = 0.46\), \(p < .001\), \(\hat{\eta}^2_G = .217\)), also the interaction between identity and valence, (\(F(2, 102) = 5.34\), \(\mathit{MSE} = 0.14\), \(p = .006\), \(\hat{\eta}^2_G = .008\)). But not the effect of valence was not found, \(F(2, 102) = 0.47\), \(\mathit{MSE} = 0.12\), \(p = .629\), \(\hat{\eta}^2_G = .001\).
 
 We further examined the effect of valence for both self and other.
 
@@ -586,13 +591,13 @@ We further examined the effect of valence for both self and other.
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
-We found the main effect of Matchness (\(F(1, 58) = 79.85\), \(\mathit{MSE} = 4,817.48\), \(p < .001\), \(\hat{\eta}^2_G = .123\)) and intercation between Matchness and Identity(\(F(1, 58) = 81.15\), \(\mathit{MSE} = 3,226.69\), \(p < .001\), \(\hat{\eta}^2_G = .087\))
+We found the main effect of Matchness (\(F(1, 51) = 58.80\), \(\mathit{MSE} = 5,078.39\), \(p < .001\), \(\hat{\eta}^2_G = .121\)) and intercation between Matchness and Identity(\(F(1, 51) = 73.74\), \(\mathit{MSE} = 3,457.47\), \(p < .001\), \(\hat{\eta}^2_G = .105\))
 
 We carried out two separate ANOVA for both Match and mismatched trials.
 
-For matched trials, we found the effect of identity \(F(1, 58) = 124.15\), \(\mathit{MSE} = 4,037.53\), \(p < .001\), \(\hat{\eta}^2_G = .257\), and the interaction between morality and identity,\(F(1.9, 110.18) = 4.41\), \(\mathit{MSE} = 465.91\), \(p = .016\), \(\hat{\eta}^2_G = .003\). However, there is no main effect of valence (\(F(1.98, 114.82) = 0.94\), \(\mathit{MSE} = 606.30\), \(p = .392\), \(\hat{\eta}^2_G = .001\)).
+For matched trials, we found the effect of identity \(F(1, 51) = 119.02\), \(\mathit{MSE} = 4,014.61\), \(p < .001\), \(\hat{\eta}^2_G = .291\), and the interaction between morality and identity,\(F(1.76, 89.9) = 3.79\), \(\mathit{MSE} = 450.33\), \(p = .031\), \(\hat{\eta}^2_G = .003\). However, there is no main effect of valence (\(F(1.98, 101.03) = 1.84\), \(\mathit{MSE} = 589.86\), \(p = .164\), \(\hat{\eta}^2_G = .002\)).
 
-For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 0.16\), \(\mathit{MSE} = 1,547.37\), \(p = .692\), \(\hat{\eta}^2_G = .000\)), Identity(\(F(1.96, 113.52) = 0.68\), \(\mathit{MSE} = 390.26\), \(p = .508\), \(\hat{\eta}^2_G = .000\)), interaction (\(F(1.9, 110.27) = 0.04\), \(\mathit{MSE} = 585.80\), \(p = .953\), \(\hat{\eta}^2_G = .000\)).
+For non-matched trials, there was no significant effect. Morality (\(F(1, 51) = 0.36\), \(\mathit{MSE} = 1,446.84\), \(p = .551\), \(\hat{\eta}^2_G = .001\)), Identity(\(F(1.94, 98.78) = 0.52\), \(\mathit{MSE} = 388.25\), \(p = .591\), \(\hat{\eta}^2_G = .000\)), interaction (\(F(1.91, 97.21) = 0.25\), \(\mathit{MSE} = 536.96\), \(p = .770\), \(\hat{\eta}^2_G = .000\)).
 
 \begin{table}[tbp]
 \begin{center}
@@ -602,9 +607,9 @@ For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
 \midrule
-Identity & 124.15 & 1 & 58 & 4,037.53 & < .001 & .257\\
-Morality & 0.94 & 1.98 & 114.82 & 606.30 & .392 & .001\\
-Identity $\times$ Morality & 4.41 & 1.9 & 110.18 & 465.91 & .016 & .003\\
+Identity & 119.02 & 1 & 51 & 4,014.61 & < .001 & .291\\
+Valence & 1.84 & 1.98 & 101.03 & 589.86 & .164 & .002\\
+Identity $\times$ Valence & 3.79 & 1.76 & 89.9 & 450.33 & .031 & .003\\
 \bottomrule
 \addlinespace
 \end{tabular}
@@ -615,32 +620,9 @@ Identity $\times$ Morality & 4.41 & 1.9 & 110.18 & 465.91 & .016 & .003\\
 \end{center}
 \end{table}
 
-We further examined the effect of valence for both self and other for mached trials.
+We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, \(F(1.98, 101.19) = 6.88\), \(\mathit{MSE} = 374.21\), \(p = .002\), \(\hat{\eta}^2_G = .008\), BF10 = 11.16. Paired t tests showed that good-self condition (654 ± 67) were faster relative to bad-self condition (665 ± 64.6), \emph{t}(51) = -3.57, \emph{p} = 0.0022, Cohen's \emph{d} = -0.451 CI {[}-0.718 -0.182{]}, BF10 = 27.0, and over neutral-self condition (664 ± 64), \emph{t}(51) = -2.94, \emph{p} = 0.013, Cohen's \emph{d} = -0.362, 95\% CI {[}-0.624 -0.097{]}, BF10 = 4.63. The neutral-self and bad-self conditionsdid not differ, \emph{t}(51) = -0.44, \emph{p} = 0.89, Cohen's \emph{d} = 0.0499, CI {[}-0.305 0.206{]}, BF10 = 0.153 (see Figure 5).
 
-Identity = Other:
-contrast estimate SE df t.ratio p.value
-Bad - Good -4.02 5.07 58 -0.792 0.7093
-Bad - Neutral -1.79 4.91 58 -0.365 0.9294
-Good - Neutral 2.23 4.40 58 0.506 0.8687
-
-Identity = Self:
-contrast estimate SE df t.ratio p.value
-Bad - Good 11.39 3.28 58 3.467 0.0028
-Bad - Neutral 1.39 3.62 58 0.383 0.9225
-Good - Neutral -10.00 3.60 58 -2.781 0.0197
-
-P value adjustment: tukey method for comparing a family of 3 estimates
-Morality = Bad:
-contrast estimate SE df t.ratio p.value
-Other - Self 69.1 8.00 58 8.631 \textless{}.0001
-
-Morality = Good:
-contrast estimate SE df t.ratio p.value
-Other - Self 84.5 7.28 58 11.605 \textless{}.0001
-
-Morality = Neutral:
-contrast estimate SE df t.ratio p.value
-Other - Self 72.2 7.06 58 10.231 \textless{}.0001
+For the stranger condition, the results showed that there was no difference among these conditions, \(F(1.92, 98.02) = 0.04\), \(\mathit{MSE} = 634.72\), \(p = .955\), \(\hat{\eta}^2_G = .000\), BF10 = 0.077.
 
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
@@ -671,7 +653,7 @@ Morality (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\h
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-8}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-7}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -705,8 +687,8 @@ We further examined the effect of valence for both self and other.
 \hypertarget{results-8}{%
 \section{Results}\label{results-8}}
 
-\hypertarget{discussion-3}{%
-\section{Discussion}\label{discussion-3}}
+\hypertarget{discussion-4}{%
+\section{Discussion}\label{discussion-4}}
 
 \newpage
 
