--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1359,105 +1359,267 @@ df3b_RT_anova_nm <- afex::aov_ez('Subject','RT_m',df3b.v.rt_m2,     # using afex
                                   within = c('Identity','Valence'))
 df3b_RT_anova_nm_apa <- df3b_RT_anova_nm %>% papaja::apa_print()
 ```
-For the matched trials, ce , the effect of identity , and the interaction . 
-For the matched trials, we found that interaction between of valence and identity, `r df3b_RT_anova_m_apa$full$Identity_Valence`, BF10 = 1.17. 
+For the matched trials, we found that interaction between of valence and identity, `r df3b_RT_anova_m_apa$full$Identity_Valence`, BF10 = 1.17. Then, the matched trials were analyzed for the self-relevance and stranger-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, `r df3b.v.rt_m1_s_anova_apa$full$Valence`, BF10 = 4.54e+6. Paired *t*-tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), *t*(55) = -8.78, *p* < 0.001, Cohen’s *d* = -1.173, 95% CI [-1.511 -0.828], BF10 = 1.84e+9, and to neutral-self association (880 ± 116), *t*(55) = 3.748, *p* < 0.0001, Cohen’s *d* = -0.501, 95% CI [-0.777 -0.221], BF10 = 58.7. The neutral-self was faster than the bad-self associations, *t*(55) = -2.41, *p* = 0.019 , Cohen’s *d* = -0.321, 95% CI [-0.589 -0.051], BF10 = 2.03. 
+The effect of moral valence was also significant for the stranger-relevance conditions, `r df3b.v.rt_m1_o_anova_apa$full$Valence`, BF10 = 8.55. the good-other condition (734 ± 158) didn’t differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen’s *d* = -0.009, 95% CI [-0.271 -0.293], BF10 = 0.15, but faster than the bad other condition (776 ± 173), *t*(55) = -3.14, *p* = 0.0027, Cohen’s *d* = -0.419, 95% CI [-0.691 -0.144], BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, *t*(55) = -3.232, *p* = 0.0021, Cohen’s *d* = -0.432, 95% CI [-0.704 -0.156], BF10 = 14.3. 
 
-Then, the matched trials were analyzed for the self-relevance and stranger-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, `r df3b.v.rt_m1_s_anova_apa$full$Valence`, BF10 = 4.54e+6. Paired t tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), t(55) = -8.78, p < 0.001, Cohen’s *d* = -1.173, 95% CI [-1.511 -0.828], BF10 = 1.84e+9, and to neutral-self association (880 ± 116), t(55) = 3.748, p < 0.0001, Cohen’s *d* = -0.501, 95% CI [-0.777 -0.221], BF10 = 58.7. The neutral-self was faster than the bad-self associations, t(55) = -2.41, p = 0.019 , Cohen’s *d* = -0.321, 95% CI [-0.589 -0.051], BF10 = 2.03. 
-The effect of moral valence was also significant for the stranger-relevance conditions, `r df3b.v.rt_m1_o_anova_apa$full$Valence`, BF10 = 8.55. the good-other condition (734 ± 158) didn’t differ from neutral-other condition (735 ±160), t(55) = -0.07, p = 0.946, Cohen’s *d* = -0.009, 95% CI [-0.271 -0.293], BF10 = 0.15, but faster than the bad other condition (776 ± 173), t(55) = -3.14, p = 0.0027, Cohen’s *d* = -0.419, 95% CI [-0.691 -0.144], BF10 = 11.3. The neutral-other condition also faster than the bad-other condition, t(55) = -3.232, p = 0.0021, Cohen’s *d* = -0.432, 95% CI [-0.704 -0.156], BF10 = 14.3. 
+We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self  vs. good-stranger, *t*(55) = 4.29, *p* < 0.001, Cohen’s *d* = 0.573, 95% CI [0.288 0.854], BF10 = 297.2; neutral-self  vs. neutral -stranger, *t*(55) = 7.17, *p* < 0.001, Cohen’s *d* = 0.958, 95% CI [0.638 1.272]), BF10 = 5.77e+6; bad-self vs. bad-other, *t*(55) = 6.03, *p* < 0.001, Cohen’s *d* = 0.806, 95% CI [0.5 1.11], BF10 = 100208.03.
 
-We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self  vs. good-stranger, t(55) = 4.29, p < 0.001, Cohen’s *d* = 0.573, 95% CI [0.288 0.854], BF10 = 297.2; neutral-self  vs. neutral -stranger, t(55) = 7.17, p < 0.001, Cohen’s *d* = 0.958, 95% CI [0.638 1.272]), BF10 = 5.77e+6; bad-self vs. bad-other, t(55) = 6.03, p < 0.001, Cohen’s *d* = 0.806, 95% CI [0.5 1.11], BF10 = 100208.03. 
-
+## Discussion
+In experiment 3b, we separated the self-referential and other-referential tasks into different blocks so that participants had lower cognitive load when finish the task. We replicated the pattern from experiment 3a that the valence effect is stronger when the stimuli were self-referential. Contrast to experiment 3a, however, we found that the self-referential condition is out-performed by other-referential conditions. This pattern suggest that the self-referential enhanced the valence effect, and the advantage to self is relative instead of absolute.
 
 # Experiment 4a
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf. Sui et al., 2012), but we presented labels of different moral valence levels in the shapes. 
 
 ```{r loadingData_4a,echo=FALSE,results='hide'}
-df4a_dprime_long <- read.csv('.\\exp4a\\exp4a_dprime_long.csv') %>%
-  dplyr::mutate(Morality = ifelse(Morality == "Moral", "Good",
-                             ifelse(Morality == "Immoral","Bad", 'Neutral')))
+df4a_1 <- read.csv(".\\exp4a\\rawdata_behav_exp4a_2015.csv",header = TRUE, sep = ",",stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
+  dplyr::rename(Morality = morality,
+                Identity = self) %>%
+  dplyr::mutate(Site = "THU")
 
-df4a_rt_acc_long <- read.csv('.\\exp4a\\exp4a_rt_acc_long.csv') %>%
-  dplyr::mutate(Morality = ifelse(Morality == "Moral", "Good",
-                             ifelse(Morality == "Immoral","Bad", "Neutral"))) %>%
-  dplyr::rename(Match = Matchness) %>%
-  dplyr::mutate(Match = ifelse(Match == 'Match', 'match','mismatch'))
+df4a_2 <- read.csv(".\\exp4a\\rawdata_behav_exp4a_2017.csv",header = TRUE, sep = ",",stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
+  dplyr::mutate(Site = "WZU")
+
+df4a <- rbind(df4a_1,df4a_2) %>%
+  dplyr::rename(ACC = Target.ACC,           # rename columns
+                RT  = Target.RT,
+                CRESP = Target.CRESP,
+                BlockNo = BlockList.Sample,
+                TrialNo = SubTrial,
+                RESP = Target.RESP,
+                Matchness = YesNoResp,
+                Valence = Morality) %>%
+  dplyr::mutate(Valence  = ifelse(Valence == "Normal", "Neutral", Valence),
+                Identity = ifelse(Identity == "self" | Identity == "Self", "Self", "Other"),
+                Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
+                Age = ifelse(Age == 0, NA, Age),                             # if the min age is 0, that age is missing
+                Subject = factor(Subject))
+rm(df4a_1,df4a_2) # remove the temporary variables.
+
+df4a.T.basic     <- df4a %>%
+  dplyr::select(Site, Subject, Age, Sex) %>%
+  dplyr::distinct(Subject, .keep_all = TRUE) %>%
+  dplyr::summarise(N = length(Subject),
+                   N_thu = length(Site[Site == "THU"]),
+                   N_wzu = length(Site[Site == "WZU"]),
+                   Nf = length(Sex[Sex == "female"]),
+                   Nm = length(Sex[Sex == "male"]),
+                   Age_mean = round(mean(Age,na.rm=TRUE),2),
+                   Age_sd = round(sd(Age,na.rm=TRUE),2))
+  
+# number of participant who practiced but not in the formal experiment
+nQuit <- length(unique(df4a$Subject[is.na(df4a$BlockNo)])) - length(unique(df4a$Subject[!is.na(df4a$BlockNo)]))
+
+# participants should be excluded
+df4a.excld.sub <-  df4a %>%
+  dplyr::group_by(Subject) %>%
+  dplyr::mutate(ACC = ifelse(RT <= 200, 0, ACC)) %>%  # set less than 200 ms response as wrong
+  #dplyr::filter(!(ACC == 1 & RT <= 200)) %>%
+  dplyr::summarise(N = length(ACC),                   # caculate the overall accuracy for each subject
+                   N_crrct = sum(ACC),
+                   ACC = sum(ACC)/length(ACC)) %>%
+  dplyr::filter(ACC < 0.6) %>%                        # exlucde the participants with less than 60% overall accuracy
+  dplyr::select(Subject)
+
+# The rate of excluded trials in valid data
+df4a.invalid_trial_rate   <- df4a %>%
+  dplyr::filter(complete.cases(BlockNo)) %>%
+  dplyr::filter(!(Subject %in% df4a.excld.sub$Subject)) %>%   # exclude the invalid subjects
+  dplyr::summarize(rate = length(RT[RT <= 200 & ACC == 1])/length(RT)) %>%
+  dplyr::pull()
+
+df4a.v   <- df4a %>%
+  dplyr::filter(complete.cases(BlockNo)) %>%
+  dplyr::filter(!(Subject %in% df4a.excld.sub$Subject)) %>%   # exclude the invalid subjects
+  dplyr::filter(!(RT <= 200 & ACC == 1))                      # exclude < 200 trials
+
+df4a.v.basic     <- df4a.v %>%
+  dplyr::select(Site, Subject, Age, Sex) %>%
+  dplyr::distinct(Subject, .keep_all = TRUE) %>%
+  dplyr::summarise(N = length(Subject),
+                   N_thu = length(Site[Site == "THU"]),
+                   N_wzu = length(Site[Site == "WZU"]),
+                   Nf = length(Sex[Sex == "female"]),
+                   Nm = length(Sex[Sex == "male"]),
+                   Age_mean = round(mean(Age,na.rm=TRUE),2),
+                   Age_sd = round(sd(Age,na.rm=TRUE),2))
+
+#df4a_dprime_long <- read.csv('.\\exp4a\\exp4a_dprime_long.csv') %>%
+#  dplyr::mutate(Morality = ifelse(Morality == "Moral", "Good",
+#                             ifelse(Morality == "Immoral","Bad", 'Neutral')))
+
+#df4a_rt_acc_long <- read.csv('.\\exp4a\\exp4a_rt_acc_long.csv') %>%
+#  dplyr::mutate(Morality = ifelse(Morality == "Moral", "Good",
+#                             ifelse(Morality == "Immoral","Bad", "Neutral"))) %>%
+#  dplyr::rename(Match = Matchness) %>%
+#  dplyr::mutate(Match = ifelse(Match == 'Match', 'match','mismatch'))
 ```
-## Participants
-64 participants (37 female, age = 19.7 $\pm$ 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (< 0.6). The results for the remaining 59 participants (33 female, age = 19.78 $\pm$ 1.2) were analyzed and reported.
+## Methods
+### Participants
+`r df4a.T.basic$N` participants (`r df4a.T.basic$Nf` female, age = `r df4a.T.basic$Age_mean` $\pm$ `r df4a.T.basic$Age_sd`) participated the current study, `r df4a.T.basic$N_thu` of them were from Tsinghua Universtiy in 2015, `r df4a.T.basic$N_wzu` were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (< 0.6). The results for the remaining `r df4a.v.basic$N` participants (`r df4a.v.basic$Nf` female, age = `r df4a.v.basic$Age_mean` $\pm$ `r df4a.v.basic$Age_sd`) were analyzed and reported.
+
+### Experimental design
+As in Experiment 3, a 2× 3× 2 within-subject design was used. The first variable was self-relevance (self and stranger associations); the second variable was moral valence (good, normalneutral and bad associations); the third variable was the matching between shape and label (matching vs. non-match for the personal association). 
+However, in this the task, participants only learn the association between two geometric shapes and two labels (self and other), i.e., only self-relevance were related to the task. The moral valence manipulation was achieved by embeding the personal label of the labels in the geometric shapes, see below. For simplicity, the trials where shapes where paired with self and with a word of “good person” inside were shorted as good-self condition, similarly, the trials where shapes paired with the self and with a word of “bad person” inside were shorted as bad-self condition. Hence, we also have six conditions: good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other.
+
+### Stimuli
+2 shapes were included (circle, square) and each appeared above a central fixation cross with the personal label appearing below.  However, the shapes were not empty but with a two-Chinese-character word in the middle, the word was one of three labels with different moral valence: “good person”, “bad person” and “neutral person”. Before the experiment, participants learned the self/other association, and were informed to only response to the association between shapes’ configure and the labels below the fixation, but ignore the words within shapes. Besides the behavioral experiments, participants from Tsinghua community also finished questionnaires as Experiments 3, and participants from Wenzhou community finished a series of questionnaire as the other experiment finished in Wenzhou.
+
+### Procedure
+The procedure was similar to Experiment 1. There were 6 blocks of trial, each with 120 trials for 2017 data. Due to procedure error, the data collected in 2015 in Tsinghua community only have 60 trials for each block, i.e., 30 trials per condition. 
+
+### Data analysis
+The data were analyzed in the same way as in experiment 3a and 3b.
+
 
 ## Results
-### Analaysis of d prime.
+### Analaysis of *d* prime.
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 ```{r analyzing for d prime_4a, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+# calculating the dprime 
+df4a.v.dprime_l <- df4a.v %>%
+  dplyr::mutate(sdt = mosaic::derivedFactor("hit" = (ACC ==1 & Matchness == "Match"), # code as hit
+                                    "CR" = (ACC ==1  & Matchness == "Mismatch"),      # correct reject
+                                    "miss" = (ACC == 0 & Matchness == "Match"),       # miss
+                                    "FA" = (ACC == 0 & Matchness == "Mismatch"),      # false alarm
+                                    method ="first",  .default = NA)) %>% 
+  dplyr::group_by(Site, Subject, Age, Sex, Valence,Identity, sdt) %>%
+  dplyr::summarise(N = length(sdt)) %>%                                    # calculate the counts for each 
+  dplyr::ungroup() %>%
+  tidyr::spread(key = sdt, value = N,fill = 0) %>%                          # long-to-wide format
+  dplyr::mutate(hitR = hit/(hit + miss),                                    # hit rate
+                FAR  = FA/(FA+CR)) %>%                                      # fa rate
+  dplyr::mutate(hitR = ifelse(hitR == 1, 1 - 1/(2*(hit + miss)), hitR),     # if hit rate is 1, standardize it
+                FAR  = ifelse(FAR == 0, 1/(2*(hit + miss)), FAR)) %>%       # if FA rate is 0, standardize it
+  dplyr::mutate(dprime = qnorm(hitR) - qnorm(FAR)) %>%
+  dplyr::select(Site, Subject, Age, Sex, Valence, Identity, dprime) %>%   # select relevant columns
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")),
+                Identity = factor(Identity, levels = c('Self', 'Other')))
 # anova for d prime with 2*2 design
-df4a_dprime_anova <- afex::aov_ez('Subject','dprime',df4a_dprime_long,  # using afex's function 
-                                  within = c('Identity','Morality'))
+df4a_dprime_anova <- afex::aov_ez('Subject','dprime',df4a.v.dprime_l,  # using afex's function 
+                                  within = c('Identity','Valence'))
 
 # use LMM, random intercept for each participant
-df4a_d_mixed <- afex::mixed(dprime ~ Identity*Morality +(1|Subject), 
-                          df4a_dprime_long,
+df4a_d_mixed <- afex::mixed(dprime ~ Identity*Valence +(1|Subject), 
+                          df4a.v.dprime_l,
                           method = "S",
                           control = lmerControl(optCtrl = list(maxfun = 1e6)))
 
 df4a_dprime_anova_apa <- df4a_dprime_anova$aov %>% papaja::apa_print()
 ```
-We found the effect of identity (`r df4a_dprime_anova_apa$full$Identity`) and its interaction with valence (the effect of gender differed by clinic, (`r df4a_dprime_anova_apa$full$Identity_Morality`). But the effect of valence was not found, `r df4a_dprime_anova_apa$full$Morality`.
+We found the effect of identity (`r df4a_dprime_anova_apa$full$Identity`), also the interaction between identity and valence, (`r df4a_dprime_anova_apa$full$Identity_Valence`). But not the effect of valence was not found, `r df4a_dprime_anova_apa$full$Valence`.
 
 ```{r results='asis', echo = F}
 #knitr::kable(nice(df4b_dprime_anova), caption = "ANOVA of d prime")
-apa_table(df4a_dprime_anova_apa$table
-  , caption = "A really beautiful ANOVA table."
-  , note = "Note that the column names contain beautiful mathematical copy: This is because the table has variable labels."
-)
+#apa_table(df4a_dprime_anova_apa$table
+#  , caption = "A really beautiful ANOVA table."
+#  , note = "Note that the column names contain beautiful mathematical copy: This is because the table has variable labels."
+#)
 ```
 
 We further examined the effect of valence for both self and other. 
 
 ```{r results='asis', echo = F}
-m2 <- emmeans::emmeans(df4a_dprime_anova, "Morality", by = "Identity") # compare each valence for both self and other condition
-#pairs(m2)
+posthoc_4a_d_m1 <- emmeans::emmeans(df4a_dprime_anova, "Valence", by = "Identity") # compare each valence for both self and other condition
+#pairs(posthoc_4a_d_m1)
 # summary(as.glht(pairs(m2)), test=adjusted("free"))
-m3 <- emmeans(df4a_dprime_anova, "Identity", by = "Morality") # compare self vs. other for each valence condition
-#pairs(m3)
+posthoc_4a_d_m2 <- emmeans(df4a_dprime_anova, "Identity", by = "Valence") # compare self vs. other for each valence condition
+#pairs(posthoc_4a_d_m2)
 ```
 
 ### Analaysis of reaction time.
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 ```{r analyzing for RT_4a, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-# anova for d prime with 2*2 design
-df4a_RT_anova <- afex::aov_ez('Subject','RT',df4a_rt_acc_long,  # using afex's function 
-                                  within = c('Match','Identity','Morality'))
+df4a.v.rt_m <- df4a.v %>%
+  dplyr::filter(ACC == 1) %>%
+  dplyr::group_by(Site,Subject,Matchness, Identity, Valence) %>%
+  dplyr::summarise(RT_m = mean(RT),
+                   Ntrial = length(RT)) %>%
+  dplyr::ungroup()
+
+df4a_RT_anova <- afex::aov_ez('Subject','RT_m',df4a.v.rt_m,     # using afex's function 
+                                  within = c('Matchness','Identity','Valence'))
 df4a_RT_anova_apa <- df4a_RT_anova %>% papaja::apa_print()
 
+
+# anova for d prime with 2*2 design
+#df4a_RT_anova <- afex::aov_ez('Subject','RT',df4a_rt_acc_long,  # using afex's function 
+#                                  within = c('Match','Identity','Morality'))
+#df4a_RT_anova_apa <- df4a_RT_anova %>% papaja::apa_print()
+
 # use LMM, random intercept for each participant
-df4a_RT_mixed <- afex::mixed(RT ~ Match*Identity*Morality +(1|Subject), 
-                          df4a_rt_acc_long,
-                          method = "S",
-                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
-
-
+#df4a_RT_mixed <- afex::mixed(RT ~ Match*Identity*Morality +(1|Subject), 
+#                          df4a_rt_acc_long,
+#                          method = "S",
+#                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
 ```
-We found the main effect of Matchness (`r df4a_RT_anova_apa$full$Match`) and intercation between Matchness and Identity(`r df4a_RT_anova_apa$full$Match_Identity`)
+We found the main effect of Matchness (`r df4a_RT_anova_apa$full$Matchness`) and intercation between Matchness and Identity(`r df4a_RT_anova_apa$full$Matchness_Identity`)
 
 We carried out two separate ANOVA for both Match and mismatched trials.
 
 ```{r analyzing for RT_4a_match, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-# anova for d prime with 2*2 design
-df4a_rt_acc_long_m <- df4a_rt_acc_long %>% dplyr::filter(Match == 'match')
-df4a_rt_acc_long_nm <- df4a_rt_acc_long %>% dplyr::filter(Match == 'mismatch')
-df4a_RT_anova_m <- afex::aov_ez('Subject','RT',df4a_rt_acc_long_m,  # using afex's function 
-                                  within = c('Identity','Morality'))
+# match trials
+df4a.v.rt_m1 <- df4a.v %>%
+  dplyr::filter(ACC == 1 & Matchness == "Match") %>%
+  dplyr::group_by(Site, Subject, Matchness, Identity, Valence) %>%
+  dplyr::summarise(RT_m = mean(RT),
+                   Ntrial = length(RT)) %>%
+  dplyr::ungroup() %>%
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")),
+                Identity = factor(Identity, levels = c('Self', 'Other')))
+
+df4a_RT_anova_m <- afex::aov_ez('Subject','RT_m',df4a.v.rt_m1,     # using afex's function 
+                                  within = c('Identity','Valence'))
 df4a_RT_anova_m_apa <- df4a_RT_anova_m %>% papaja::apa_print()
 
-df4a_RT_anova_nm <- afex::aov_ez('Subject','RT',df4a_rt_acc_long_nm,  # using afex's function 
-                                  within = c('Identity','Morality'))
+posthoc_4a_rt <- emmeans::emmeans(df4a_RT_anova_m, c('Identity',"Valence")) # compare each valence for both self and other condition
+# pairs(posthoc_4a_rt)
+
+# Mismatch trials
+df4a.v.rt_m2 <- df4a.v %>%
+  dplyr::filter(ACC == 1 & Matchness == "Mismatch") %>%
+  dplyr::group_by(Site,Subject,Matchness, Identity, Valence) %>%
+  dplyr::summarise(RT_m = mean(RT),
+                   Ntrial = length(RT)) %>%
+  dplyr::ungroup()
+
+df4a_RT_anova_nm <- afex::aov_ez('Subject','RT_m',df4a.v.rt_m2,     # using afex's function 
+                                  within = c('Identity','Valence'))
 df4a_RT_anova_nm_apa <- df4a_RT_anova_nm %>% papaja::apa_print()
 
-```
-For matched trials, we found the effect of identity `r df4a_RT_anova_m_apa$full$Identity`, and the interaction between morality and identity,`r df4a_RT_anova_m_apa$full$Identity_Morality`. However, there is no main effect of valence (`r df4a_RT_anova_m_apa$full$Morality`). 
+# match trials: self condition
+df4a.v.rt_m1_s <- df4a.v %>%
+  dplyr::filter(ACC == 1 & Matchness == "Match" & Identity == "Self") %>%
+  dplyr::group_by(Site, Subject, Matchness, Identity, Valence) %>%
+  dplyr::summarise(RT_m = mean(RT),
+                   Ntrial = length(RT)) %>%
+  dplyr::ungroup() %>%
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")))
 
-For non-matched trials, there was no significant effect. Morality (`r df4a_RT_anova_nm_apa$full$Identity`), Identity(`r df4a_RT_anova_nm_apa$full$Morality`), interaction (`r df4a_RT_anova_nm_apa$full$Identity_Morality`).
+df4a_RT_anova_m_s <- afex::aov_ez('Subject','RT_m',df4a.v.rt_m1_s,     # using afex's function 
+                                  within = c('Valence'))
+df4a_RT_anova_m_s_apa <- df4a_RT_anova_m_s %>% papaja::apa_print()
+
+posthoc_4a_rt_s <- emmeans::emmeans(df4a_RT_anova_m_s, c("Valence")) # compare each valence for both self and other condition
+# pairs(posthoc_4a_rt_s)
+
+# match trials: other condition
+df4a.v.rt_m1_o <- df4a.v %>%
+  dplyr::filter(ACC == 1 & Matchness == "Match" & Identity == "Other") %>%
+  dplyr::group_by(Site, Subject, Matchness, Identity, Valence) %>%
+  dplyr::summarise(RT_m = mean(RT),
+                   Ntrial = length(RT)) %>%
+  dplyr::ungroup() %>%
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")))
+
+df4a_RT_anova_m_o <- afex::aov_ez('Subject','RT_m',df4a.v.rt_m1_o,     # using afex's function 
+                                  within = c('Valence'))
+df4a_RT_anova_m_o_apa <- df4a_RT_anova_m_o %>% papaja::apa_print()
+
+```
+For matched trials, we found the effect of identity `r df4a_RT_anova_m_apa$full$Identity`, and the interaction between morality and identity,`r df4a_RT_anova_m_apa$full$Identity_Valence`. However, there is no main effect of valence (`r df4a_RT_anova_m_apa$full$Valence`). 
+
+For non-matched trials, there was no significant effect. Morality (`r df4a_RT_anova_nm_apa$full$Identity`), Identity(`r df4a_RT_anova_nm_apa$full$Valence`), interaction (`r df4a_RT_anova_nm_apa$full$Identity_Valence`).
 
 ```{r results='asis', echo = F}
 #knitr::kable(nice(df4b_dprime_anova), caption = "ANOVA of d prime")
@@ -1467,16 +1629,9 @@ apa_table(df4a_RT_anova_m_apa$table
 )
 ```
 
-We further examined the effect of valence for both self and other for mached trials. 
+We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, `r df4a_RT_anova_m_s_apa$full$Valence`, BF10 = 11.16. Paired t tests showed that good-self condition (654 ± 67) were faster relative to bad-self condition (665 ± 64.6), *t*(51) = -3.57, *p* = 0.0022, Cohen’s *d* = -0.451 CI [-0.718 -0.182], BF10 = 27.0, and  over neutral-self condition (664 ± 64), *t*(51) = -2.94, *p* = 0.013, Cohen’s  *d* = -0.362, 95% CI [-0.624 -0.097], BF10 = 4.63. The neutral-self and bad-self conditionsdid not differ, *t*(51) = -0.44, *p* = 0.89, Cohen’s *d* = 0.0499, CI [-0.305 0.206], BF10 = 0.153 (see Figure 5). 
 
-```{r results='asis', echo = F}
-m2 <- emmeans::emmeans(df4a_RT_anova_m, "Morality", by = "Identity") # compare each valence for both self and other condition
-pairs(m2)
-#summary(as.glht(pairs(m2)), test=adjusted("free"))
-m3 <- emmeans(df4a_RT_anova_m, "Identity", by = "Morality") # compare self vs. other for each valence condition
-pairs(m3)
-```
-
+For the stranger condition, the results showed that there was no difference among these conditions, `r df4a_RT_anova_m_o_apa$full$Valence`, BF10 = 0.077.
 
 # Experiment 4b:
 
